--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "sass": "^1.26.10",
+    "styled-components": "^5.1.1",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "next-cookies": "^2.0.3"
