moved nestJs api to next repository. some refactoring.

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-CLIENT_API_URL=http://localhost:4000
+FLICKR_KEY=7649e9e4c4fcdee1f2a100b6a161585d
+FLICKR_SECRET=
+JWT_SECRET=secret
+JWT_EXPIRES="3 days"
