--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mova",
-  "version": "0.1.0",
+  "name": "imagify",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,16 +8,50 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/core": "^7.11.6",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@nestjs/common": "^7.0.7",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.0.7",
+    "@nestjs/platform-express": "^7.0.7",
+    "@zeit/next-typescript": "^1.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-typescript-metadata": "^0.3.0",
+    "bcrypt": "^5.0.0",
+    "env-cmd": "^10.1.0",
+    "flickr-sdk": "^3.9.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "9.5.2",
+    "next-cookies": "^2.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3",
     "sass": "^1.26.10",
+    "sqlite3": "^5.0.0",
     "styled-components": "^5.1.1",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
-    "next-cookies": "^2.0.3"
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-transform-typescript": "^7.11.0",
+    "@nestjs/cli": "^7.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.7",
+    "@types/jest": "25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.10.1",
+    "@types/react": "^16.9.34",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "typescript": "^4.0.2"
   }
 }
