--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT",
+    "db": "prisma studio --experimental",
+    "db-save": "prisma migrate save --experimental",
+    "db-up": "prisma migrate up --experimental",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@babel/core": "^7.11.6",
@@ -36,18 +40,18 @@
     "@prisma/client": "2.7.0"
   },
   "devDependencies": {
-    "@prisma/cli": "2.7.0",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-transform-typescript": "^7.11.0",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@prisma/cli": "2.7.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
     "@types/jest": "25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.10.1",
+    "@types/node": "^14.10.2",
     "@types/react": "^16.9.34",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.0.2",
