--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.7",
     "@nestjs/platform-express": "^7.0.7",
+    "@prisma/client": "2.7.0",
+    "@types/styled-components": "^5.1.7",
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-typescript-metadata": "^0.3.0",
@@ -36,8 +38,7 @@
     "sass": "^1.26.10",
     "sqlite3": "^5.0.0",
     "styled-components": "^5.1.1",
-    "toastr": "^2.1.4",
-    "@prisma/client": "2.7.0"
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.5",
