--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^8.8.0",
@@ -58,8 +59,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.24",
     "prettier": "2.8.8",
     "prisma": "^4.15.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   }
 }
