--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
-    "db": "prisma studio --experimental",
-    "db-save": "prisma migrate save --experimental",
-    "db-up": "prisma migrate up --experimental",
     "generate": "prisma generate",
     "lint": "next lint"
   },
@@ -18,7 +15,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.3",
+    "@mui/lab": "^5.0.0-alpha.133",
+    "@mui/material": "^5.13.4",
     "@nestjs/common": "^9.4.2",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.4.2",
@@ -27,18 +25,12 @@
     "bcrypt": "^5.1.0",
     "env-cmd": "^10.1.0",
     "flickr-sdk": "^6.2.1",
-    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
     "next": "^13.4.4",
-    "next-cookies": "^2.0.3",
-    "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "sass": "^1.62.1",
     "sqlite3": "^5.0.0",
-    "styled-components": "^5.1.1",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
@@ -50,7 +42,6 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^8.8.0",
@@ -59,10 +50,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "postcss": "^8.4.24",
     "prettier": "2.8.8",
     "prisma": "^4.15.0",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   }
 }
