--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -26,7 +27,8 @@
     "env-cmd": "^10.1.0",
     "flickr-sdk": "^6.2.1",
     "jsonwebtoken": "^9.0.0",
-    "next": "^13.4.4",
+    "next": "^13.4.5-canary.9",
+    "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sqlite3": "^5.0.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.7",
     "@types/jest": "25.2.3",
