--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -43,7 +43,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "typeRoots": ["src/types/next-auth.d.ts"]
   },
   "exclude": [
     "node_modules"
@@ -51,6 +52,7 @@
   "include": [
     "./**/*.tsx",
     "./**/*.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/types/next-auth.d.ts"
   ]
 }
