--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ FLICKR_SECRET=
 JWT_SECRET=secret
 JWT_EXPIRES="3 days"
 NEXTAUTH_SECRET=secret
+NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=503085388585-5olngnnbcsmalgd6p5i26j467t116uqk.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=vqhbmALITDW-GeuMHFVEucgc
 DATABASE_URL=postgresql://bohdan:dev@localhost:5432/imagify
