--- a/package.json
+++ b/package.json
@@ -19,39 +19,20 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.133",
     "@mui/material": "^5.13.4",
-    "@nestjs/common": "^9.4.2",
-    "@nestjs/config": "^2.3.2",
-    "@nestjs/core": "^9.4.2",
-    "@nestjs/platform-express": "^9.4.2",
     "@prisma/client": "^4.15.0",
-    "bcrypt": "^5.1.0",
-    "env-cmd": "^10.1.0",
     "flickr-sdk": "^6.2.1",
-    "jsonwebtoken": "^9.0.0",
-    "next": "^13.4.5-canary.9",
+    "next": "^13.4.5",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sqlite3": "^5.0.0",
-    "toastr": "^2.1.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.5.0",
-    "@types/bcrypt": "^3.0.0",
-    "@types/cookie": "^0.5.1",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.7",
     "@types/jest": "25.2.3",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@types/node": "20.3.1",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-config-standard-with-typescript": "^35.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "2.8.8",
     "prisma": "^4.15.0",
